[package]
name = "gravlox"
version = "0.1.0"
edition = "2021"
default-run = "gravlox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.0"
thiserror = "2.0.12"
